--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  google_fonts: ^3.0.1
-  url_launcher: ^6.1.4
-  cloud_firestore: ^4.5.3
-
+  google_fonts: ^4.0.4
+  url_launcher: ^6.1.10
+  firebase_storage: ^11.1.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
